--- a/pubs.bib
+++ b/pubs.bib
@@ -1,24 +1,34 @@
- @article{1Tanjitpiyanond_2022, title={A 32‐society investigation of the influence of perceived economic inequality on social class stereotyping}, volume={53}, ISSN={1099-0992}, url={http://dx.doi.org/10.1002/ejsp.2908}, DOI={10.1002/ejsp.2908}, number={2}, journal={European Journal of Social Psychology}, publisher={Wiley}, author={Tanjitpiyanond, Porntida and Jetten, Jolanda and Peters, Kim and Ashokkumar, Ashwini and Barry, Oumar and Billet, Matthew and Becker, Maja and Booth, Robert W. and Castro, Diego and Chinchilla, Juana and Costantini, Giulio and Dejonckheere, Egon and Dimdins, Girts and Erbas, Yasemin and Espinosa, Agustín and Finchilescu, Gillian and Gómez, Ángel and González, Roberto and Goto, Nobuhiko and Hatano, Aya and Hartwich, Lea and Jarukasemthawee, Somboon and Karunagharan, Jaya Kumar and Novak, Lindsay M. and Kim, Jinseok P. and Kohút, Michal and Liu, Yi and Loughnan, Steve and Onyishi, Ike E. and Onyishi, Charity N. and Varela, Micaela and Pattara‐angkoon, Iris S. and Peker, Müjde and Pisitsungkagarn, Kullaya and Rizwan, Muhammad and Suh, Eunkook M. and Swann, William and Tong, Eddie M. W. and Turner, Rhiannon N. and Vanhasbroeck, Niels and Van Lange, Paul A. M. and Vauclair, Christin‐Melanie and Vinogradov, Alexander and Wacera, Grace and Wang, Zhechen and Wibisono, Susilo and Yeung, Victoria Wai‐Lan}, year={2022}, month=nov, pages={367–382} }
+ @article{1Meston_2023, title={Psychometric Evaluation and Adaptation of the Five-Factor Sexual Satisfaction Scale (SSS-W) for Use in Men: The Sexual Satisfaction Scale (SSS)}, ISSN={1521-0715}, url={http://dx.doi.org/10.1080/0092623x.2023.2270205}, DOI={10.1080/0092623x.2023.2270205}, journal={Journal of Sex &amp; Marital Therapy}, publisher={Informa UK Limited}, author={Meston, Cindy M. and Freihart, Bridget K. and Crosby, Courtney L. and Stephenson, Kyle R. and Trapnell, Paul D.}, year={2023}, month=oct, pages={1–14} }
 
- @article{2Bosson_2023, title={A truly responsive listener is a self-verifying listener}, volume={53}, ISSN={2352-250X}, url={http://dx.doi.org/10.1016/j.copsyc.2023.101670}, DOI={10.1016/j.copsyc.2023.101670}, journal={Current Opinion in Psychology}, publisher={Elsevier BV}, author={Bosson, Jennifer K. and Swann, William B.}, year={2023}, month=oct, pages={101670} }
+ @article{2Handy_2023, title={Reduction in genital sexual arousal varies by type of oral contraceptive pill}, volume={20}, ISSN={1743-6109}, url={http://dx.doi.org/10.1093/jsxmed/qdad072}, DOI={10.1093/jsxmed/qdad072}, number={8}, journal={The Journal of Sexual Medicine}, publisher={Oxford University Press (OUP)}, author={Handy, Ariel B and McMahon, Leah N and Goldstein, Irwin and Meston, Cindy M}, year={2023}, month=jun, pages={1094–1102} }
 
- @article{3Rousis_2023, title={Behind the Blackpill: Self-Verification and Identity Fusion Predict Endorsement of Violence Against Women Among Self-Identified Incels}, ISSN={1552-7433}, url={http://dx.doi.org/10.1177/01461672231166481}, DOI={10.1177/01461672231166481}, journal={Personality and Social Psychology Bulletin}, publisher={SAGE Publications}, author={Rousis, Gregory J. and Martel, Francois Alexi and Bosson, Jennifer K. and Swann, William B.}, year={2023}, month=apr, pages={014616722311664} }
+ @article{3Sears_2022, title={A Multidimensional Evaluation of Intimacy}, volume={65}, ISSN={1778-3585}, url={http://dx.doi.org/10.1192/j.eurpsy.2022.2075}, DOI={10.1192/j.eurpsy.2022.2075}, number={S1}, journal={European Psychiatry}, publisher={Royal College of Psychiatrists}, author={Sears, M. and Mcmahon, L. and Crosby, C. and Freihart, B. and Meston, C.}, year={2022}, month=jun, pages={S802–S803} }
 
- @article{4V_zquez_2023, title={Can identity fusion foster social harmony? Strongly fused individuals embrace familiar outgroup members unless threatened}, volume={107}, ISSN={0022-1031}, url={http://dx.doi.org/10.1016/j.jesp.2023.104462}, DOI={10.1016/j.jesp.2023.104462}, journal={Journal of Experimental Social Psychology}, publisher={Elsevier BV}, author={Vázquez, Alexandra and Gómez, Ángel and López-Rodríguez, Lucía and Swann, William B.}, year={2023}, month=jul, pages={104462} }
+ @article{4Freihart_2022, title={Interpersonal autonomic synchrony and sexual satisfaction: A preliminary examination}, volume={65}, ISSN={1778-3585}, url={http://dx.doi.org/10.1192/j.eurpsy.2022.717}, DOI={10.1192/j.eurpsy.2022.717}, number={S1}, journal={European Psychiatry}, publisher={Royal College of Psychiatrists}, author={Freihart, B. and Sears, M. and Meston, C.}, year={2022}, month=jun, pages={S280–S280} }
 
- @article{5Ashokkumar_2022, title={Restoring Honor by Slapping or Disowning the Daughter}, volume={49}, ISSN={1552-7433}, url={http://dx.doi.org/10.1177/01461672221079106}, DOI={10.1177/01461672221079106}, number={6}, journal={Personality and Social Psychology Bulletin}, publisher={SAGE Publications}, author={Ashokkumar, Ashwini and Swann, William B.}, year={2022}, month=mar, pages={823–836} }
+ @article{5Sears_Greer_2022, title={A Review of Undergraduate Student Disclosures of Sexual Violence}, volume={10}, ISSN={2050-0513}, url={http://dx.doi.org/10.1016/j.sxmr.2022.06.006}, DOI={10.1016/j.sxmr.2022.06.006}, number={4}, journal={Sexual Medicine Reviews}, publisher={Oxford University Press (OUP)}, author={Sears-Greer, Mackenzie A. and Friehart, Bridget K. and Meston, Cindy M.}, year={2022}, month=aug, pages={543–553} }
 
- @article{6Dejonckheere_2022, title={Perceiving societal pressure to be happy is linked to poor well-being, especially in happy nations}, volume={12}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-021-04262-z}, DOI={10.1038/s41598-021-04262-z}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Dejonckheere, Egon and Rhee, Joshua J. and Baguma, Peter K. and Barry, Oumar and Becker, Maja and Bilewicz, Michał and Castelain, Thomas and Costantini, Giulio and Dimdins, Girts and Espinosa, Agustín and Finchilescu, Gillian and Friese, Malte and Gastardo-Conaco, Maria Cecilia and Gómez, Angel and González, Roberto and Goto, Nobuhiko and Halama, Peter and Hurtado-Parrado, Camilo and Jiga-Boy, Gabriela M. and Karl, Johannes A. and Novak, Lindsay and Ausmees, Liisi and Loughnan, Steve and Mastor, Khairul A. and McLatchie, Neil and Onyishi, Ike E. and Rizwan, Muhammad and Schaller, Mark and Serafimovska, Eleonora and Suh, Eunkook M. and Swann, William B. and Tong, Eddie M. W. and Torres, Ana and Turner, Rhiannon N. and Vinogradov, Alexander and Wang, Zhechen and Yeung, Victoria Wai-lan and Amiot, Catherine E. and Boonyasiriwat, Watcharaporn and Peker, Müjde and Van Lange, Paul A. M. and Vauclair, Christin-Melanie and Kuppens, Peter and Bastian, Brock}, year={2022}, month=feb }
+ @article{6Mesk__2022, title={Why Hungarians Have Sex: Development and Validation of a Brief 15-Item Instrument (YSEX?-15H)}, volume={51}, ISSN={1573-2800}, url={http://dx.doi.org/10.1007/s10508-022-02380-x}, DOI={10.1007/s10508-022-02380-x}, number={8}, journal={Archives of Sexual Behavior}, publisher={Springer Science and Business Media LLC}, author={Meskó, Norbert and Zsidó, András N. and Birkás, Béla and Meston, Cindy M. and Buss, David M.}, year={2022}, month=aug, pages={4007–4022} }
 
- @article{7Kowert_2022, title={Not just a game: Identity fusion and extremism in gaming cultures}, volume={7}, ISSN={2297-900X}, url={http://dx.doi.org/10.3389/fcomm.2022.1007128}, DOI={10.3389/fcomm.2022.1007128}, journal={Frontiers in Communication}, publisher={Frontiers Media SA}, author={Kowert, Rachel and Martel, Alexi and Swann, William B.}, year={2022}, month=oct }
+ @article{7Handy_2022, title={Local Responses to Genital Arousal — Mechanisms of Lubrication}, volume={14}, ISSN={1548-3592}, url={http://dx.doi.org/10.1007/s11930-022-00350-x}, DOI={10.1007/s11930-022-00350-x}, number={4}, journal={Current Sexual Health Reports}, publisher={Springer Science and Business Media LLC}, author={Handy, Ariel B. and McMahon, Leah N. and Meston, Cindy M.}, year={2022}, month=nov, pages={247–253} }
 
- @article{8Kirkland_2022, title={Social mindfulness predicts concern for nature and immigrants across 36 nations}, volume={12}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-022-25538-y}, DOI={10.1038/s41598-022-25538-y}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Kirkland, Kelly and Van Lange, Paul A. M. and Van Doesum, Niels J. and Acevedo-Triana, Cesar and Amiot, Catherine E. and Ausmees, Liisi and Baguma, Peter and Barry, Oumar and Becker, Maja and Bilewicz, Michal and Boonyasiriwat, Watcharaporn and Castelain, Thomas and Costantini, Giulio and Dimdins, Girts and Espinosa, Agustín and Finchilescu, Gillian and Fischer, Ronald and Friese, Malte and Gómez, Ángel and González, Roberto and Goto, Nobuhiko and Halama, Peter and Ilustrisimo, Ruby D. and Jiga-Boy, Gabriela M. and Kuppens, Peter and Loughnan, Steve and Markovik, Marijana and Mastor, Khairul A. and McLatchie, Neil and Novak, Lindsay M. and Onyishi, Ike E. and Peker, Müjde and Rizwan, Muhammad and Schaller, Mark and Suh, Eunkook M. and Swann, William B. and Tong, Eddie M. W. and Torres, Ana and Turner, Rhiannon N. and Vauclair, Christin-Melanie and Vinogradov, Alexander and Wang, Zhechen and Yeung, Victoria Wai Lan and Bastian, Brock}, year={2022}, month=dec }
+ @article{8Mesk__2021, title={Why Hungarians Have Sex (YSEX?-HSF)}, volume={51}, ISSN={1573-2800}, url={http://dx.doi.org/10.1007/s10508-021-02072-y}, DOI={10.1007/s10508-021-02072-y}, number={1}, journal={Archives of Sexual Behavior}, publisher={Springer Science and Business Media LLC}, author={Meskó, Norbert and Szatmári, Dóra and Láng, András and Meston, Cindy M. and Buss, David M.}, year={2021}, month=nov, pages={465–489} }
 
- @article{9Martel_2021, title={Why True Believers Make the Ultimate Sacrifice: Sacred Values, Moral Convictions, or Identity Fusion?}, volume={12}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2021.779120}, DOI={10.3389/fpsyg.2021.779120}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Martel, Francois Alexi and Buhrmester, Michael and Gómez, Angel and Vázquez, Alexandra and Swann, William B.}, year={2021}, month=nov }
+ @article{9Crosby_2021, title={Corrigendum to “Sex, sexual arousal, and sexual decision making: An evolutionary perspective” [Personal. Individ. Differ., 177 (2021): 110826 Pages 1–5]}, volume={178}, ISSN={0191-8869}, url={http://dx.doi.org/10.1016/j.paid.2021.110908}, DOI={10.1016/j.paid.2021.110908}, journal={Personality and Individual Differences}, publisher={Elsevier BV}, author={Crosby, Courtney L. and Buss, David M. and Cormack, Lawrence K. and Meston, Cindy M.}, year={2021}, month=aug, pages={110908} }
 
- @article{10Talaifar_2020, title={Asymmetries in Mutual Understanding: People With Low Status, Power, and Self-Esteem Understand Better Than They Are Understood}, volume={16}, ISSN={1745-6924}, url={http://dx.doi.org/10.1177/1745691620958003}, DOI={10.1177/1745691620958003}, number={2}, journal={Perspectives on Psychological Science}, publisher={SAGE Publications}, author={Talaifar, Sanaz and Buhrmester, Michael D. and Ayduk, Özlem and Swann, William B.}, year={2020}, month=oct, pages={338–357} }
+ @article{10Crosby_2021, title={Sex, sexual arousal, and sexual decision making: An evolutionary perspective}, volume={177}, ISSN={0191-8869}, url={http://dx.doi.org/10.1016/j.paid.2021.110826}, DOI={10.1016/j.paid.2021.110826}, journal={Personality and Individual Differences}, publisher={Elsevier BV}, author={Crosby, Courtney L. and Buss, David M. and Cormack, Lawrence K. and Meston, Cindy M.}, year={2021}, month=jul, pages={110826} }
 
- @article{11Talaifar_2020, title={A New Pathway to University Retention? Identity Fusion With University Predicts Retention Independently of Grades}, volume={12}, ISSN={1948-5514}, url={http://dx.doi.org/10.1177/1948550619894995}, DOI={10.1177/1948550619894995}, number={1}, journal={Social Psychological and Personality Science}, publisher={SAGE Publications}, author={Talaifar, Sanaz and Ashokkumar, Ashwini and Pennebaker, James W. and Medrano, Fortunato N. and Yeager, David S. and Swann, William B.}, year={2020}, month=feb, pages={108–117} }
+ @article{11Kilimnik_2020, title={Sexual Shame in the Sexual Excitation and Inhibition Propensities of Men With and Without Nonconsensual Sexual Experiences}, volume={58}, ISSN={1559-8519}, url={http://dx.doi.org/10.1080/00224499.2020.1718585}, DOI={10.1080/00224499.2020.1718585}, number={2}, journal={The Journal of Sex Research}, publisher={Informa UK Limited}, author={Kilimnik, Chelsea D. and Meston, Cindy M.}, year={2020}, month=feb, pages={261–272} }
 
- @article{12G_mez_2021, title={Why People Enter and Embrace Violent Groups}, volume={11}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2020.614657}, DOI={10.3389/fpsyg.2020.614657}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Gómez, Ángel and Martínez, Mercedes and Martel, Francois Alexi and López-Rodríguez, Lucía and Vázquez, Alexandra and Chinchilla, Juana and Paredes, Borja and Hettiarachchi, Mal and Hamid, Nafees and Swann, William B.}, year={2021}, month=jan }
-
+@Article{1,
+  title = {Freihart, B. K., & Meston, C. M. Physiological synchrony during partnered sexual activity. (In Press).},
+  author = {Cindy Meston},
+  journal = {Journal of Sex & Marital Therapy},
+  year = {2024},
+}
+@Article{2,
+  title = {Kilimnik, C. D., McMahon, L. N., & Meston, C. M. Changes in reports of sexuality pre- post- Me-Too Movement. (In press).},
+  author = {Cindy Meston},
+  journal = {Psychology of Women Quarterly},
+  year = {2024},
+}
