--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,7 @@
  @inbook{Meston_2023, title={The Effects of Acute Exercise on Physiological Sexual Arousal in Women}, ISBN={9783031218811}, url={http://dx.doi.org/10.1007/978-3-031-21881-1_21}, DOI={10.1007/978-3-031-21881-1_21}, booktitle={Sex Hormones, Exercise and Women}, publisher={Springer International Publishing}, author={Meston, Cindy M. and Stanton, Amelia M. and Freihart, Bridget K. and Sears-Greer, Mackenzie A.}, year={2023}, pages={479–495} }
 
 @InCollection{1,
-  title = {McMahon, L., Freihart, B. K., & Meston, C. M., (2023). Intimate partner sexual violence: Interventions. },
+  title = { Intimate partner sexual violence: Interventions. },
   author = {Cindy Meston},
   booktitle = { In: T. K. Shackelford  (Ed.), Encyclopedia of Domestic Violence.Springer, Cham. https://doi.org/10.1007/978-3-030-85493-5_862-1.},
   year = {2023},
@@ -29,13 +29,20 @@
   publisher = {.},
 }
 @InCollection{5,
+  title = {Sexual satisfaction and gender differences.},
+  author = {Cindy Meston},
+  booktitle = {In: Michalos, A. C. (Ed.) Encyclopedia of Quality of Life and Well-Being Research (2nd ed) (pp 6402-6405). Netherlands: Springer.},
+  year = {2023},
+  publisher = {.},
+}
+@InCollection{6,
   title = {Female Orgasmic Disorder},
   author = {Cindy Meston},
   booktitle = {In: A Lykins (Ed.), Encylopedia for Sexuality and Gender. New York: Springer.},
   year = {2022},
   publisher = {.},
 }
-@InCollection{6,
+@InCollection{7,
   title = {Sexual satisfaction and gender differences.},
   author = {Cindy Meston},
   booktitle = {In: Michalos, A. C. (Ed.) Encyclopedia of Quality of Life and Well-Being Research (2nd ed). Netherlands: Springer.},
