many cv updates

--- a/chaps.bib
+++ b/chaps.bib
@@ -1,51 +1,9 @@
- @inbook{Meston_2023, title={The Effects of Acute Exercise on Physiological Sexual Arousal in Women}, ISBN={9783031218811}, url={http://dx.doi.org/10.1007/978-3-031-21881-1_21}, DOI={10.1007/978-3-031-21881-1_21}, booktitle={Sex Hormones, Exercise and Women}, publisher={Springer International Publishing}, author={Meston, Cindy M. and Stanton, Amelia M. and Freihart, Bridget K. and Sears-Greer, Mackenzie A.}, year={2023}, pages={479–495} }
+ @book{Balcetis_2022, title={The Handbook of Impression Formation: A Social Psychological Approach}, ISBN={9781003045687}, url={http://dx.doi.org/10.4324/9781003045687}, DOI={10.4324/9781003045687}, publisher={Routledge}, author={Balcetis, Emily and Moskowitz, Gordon B.}, year={2022}, month=aug }
 
 @InCollection{1,
-  title = { Intimate partner sexual violence: Interventions. },
-  author = {Cindy Meston},
-  booktitle = { In: T. K. Shackelford  (Ed.), Encyclopedia of Domestic Violence.Springer, Cham. https://doi.org/10.1007/978-3-030-85493-5_862-1.},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {Meston, C. M., Freihart, B. K., & Stanton, A. M. (2023). Sexual dysfunction. In: Kreuger, R. F. & Blaney. P. H. (Eds) Oxford Textbook of Psychopathology (4th Ed).},
-  author = {Cindy Meston},
-  booktitle = {In: B. Kreuger & P. Blaney (Eds) Oxford Textbook of Psychopathology (4th Ed).},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{3,
-  title = {Meston, C. M., Stanton, A. S., Freihart, B. K., & Sears, M. A. (2023). The effects of acute exercise on physiological sexual arousal in women. In: A. C. Hackney (Ed.) Sex Hormones, Exercise, and Women (2nd Ed). New York: Springer Nature.},
-  author = {Cindy Meston},
-  booktitle = {In: A. C. Hackney (Ed.) Sex Hormones, Exercise, and Women (2nd Ed). New York: Springer Nature.},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{4,
-  title = {Relationship satisfaction. },
-  author = {Cindy Meston},
-  booktitle = {In: T. K. Shackelford  (Ed.), Encyclopedia of Sexual Psychology and Behavior, Springer, Cham. https://doi.org/10.1007/978-3-031-08956-5_1998-1.},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{5,
-  title = {Sexual satisfaction and gender differences.},
-  author = {Cindy Meston},
-  booktitle = {In: Michalos, A. C. (Ed.) Encyclopedia of Quality of Life and Well-Being Research (2nd ed) (pp 6402-6405). Netherlands: Springer.},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{6,
-  title = {Female Orgasmic Disorder},
-  author = {Cindy Meston},
-  booktitle = {In: A Lykins (Ed.), Encylopedia for Sexuality and Gender. New York: Springer.},
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{7,
-  title = {Sexual satisfaction and gender differences.},
-  author = {Cindy Meston},
-  booktitle = {In: Michalos, A. C. (Ed.) Encyclopedia of Quality of Life and Well-Being Research (2nd ed). Netherlands: Springer.},
-  year = {2021},
+  title = {The integrated causal uncertainty model},
+  author = {Marlone D. Henderson},
+  booktitle = {The handbook of the uncertain self (2nd edition)},
+  year = {2024},
   publisher = {.},
 }
