--- a/pubs.bib
+++ b/pubs.bib
@@ -1,34 +1,32 @@
- @article{1Meston_2023, title={Psychometric Evaluation and Adaptation of the Five-Factor Sexual Satisfaction Scale (SSS-W) for Use in Men: The Sexual Satisfaction Scale (SSS)}, ISSN={1521-0715}, url={http://dx.doi.org/10.1080/0092623x.2023.2270205}, DOI={10.1080/0092623x.2023.2270205}, journal={Journal of Sex &amp; Marital Therapy}, publisher={Informa UK Limited}, author={Meston, Cindy M. and Freihart, Bridget K. and Crosby, Courtney L. and Stephenson, Kyle R. and Trapnell, Paul D.}, year={2023}, month=oct, pages={1–14} }
+ @article{1Nugiel_2023, title={Brain connectivity and academic skills in English learners}, volume={34}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhad414}, DOI={10.1093/cercor/bhad414}, number={1}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Nugiel, Tehila and Demeter, Damion V and Mitchell, Mackenzie E and Garza, AnnaCarolina and Hernandez, Arturo E and Juranek, Jenifer and Church, Jessica A}, year={2023}, month=dec }
 
- @article{2Handy_2023, title={Reduction in genital sexual arousal varies by type of oral contraceptive pill}, volume={20}, ISSN={1743-6109}, url={http://dx.doi.org/10.1093/jsxmed/qdad072}, DOI={10.1093/jsxmed/qdad072}, number={8}, journal={The Journal of Sexual Medicine}, publisher={Oxford University Press (OUP)}, author={Handy, Ariel B and McMahon, Leah N and Goldstein, Irwin and Meston, Cindy M}, year={2023}, month=jun, pages={1094–1102} }
+ @article{2Burenkova_2024, title={Associations between telomere length, glucocorticoid receptor gene DNA methylation, volume of stress-related brain structures, and academic performance in middle-school-age children}, volume={17}, ISSN={2666-4976}, url={http://dx.doi.org/10.1016/j.cpnec.2023.100223}, DOI={10.1016/j.cpnec.2023.100223}, journal={Comprehensive Psychoneuroendocrinology}, publisher={Elsevier BV}, author={Burenkova, Olga V. and Naumova, Oksana Yu. and Church, Jessica A. and Juranek, Jenifer and Fletcher, Jack M. and Grigorenko, Elena L.}, year={2024}, month=feb, pages={100223} }
 
- @article{3Sears_2022, title={A Multidimensional Evaluation of Intimacy}, volume={65}, ISSN={1778-3585}, url={http://dx.doi.org/10.1192/j.eurpsy.2022.2075}, DOI={10.1192/j.eurpsy.2022.2075}, number={S1}, journal={European Psychiatry}, publisher={Royal College of Psychiatrists}, author={Sears, M. and Mcmahon, L. and Crosby, C. and Freihart, B. and Meston, C.}, year={2022}, month=jun, pages={S802–S803} }
+ @article{3Porter_2023, title={A longitudinal examination of executive function abilities, attention‐deficit/hyperactivity disorder, and puberty in adolescence}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.14057}, DOI={10.1111/cdev.14057}, journal={Child Development}, publisher={Wiley}, author={Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=dec }
 
- @article{4Freihart_2022, title={Interpersonal autonomic synchrony and sexual satisfaction: A preliminary examination}, volume={65}, ISSN={1778-3585}, url={http://dx.doi.org/10.1192/j.eurpsy.2022.717}, DOI={10.1192/j.eurpsy.2022.717}, number={S1}, journal={European Psychiatry}, publisher={Royal College of Psychiatrists}, author={Freihart, B. and Sears, M. and Meston, C.}, year={2022}, month=jun, pages={S280–S280} }
+ @article{4Church_2023, title={The Brain’s Control Networks in Reading: Insights From Cross‐Task Studies of Youth}, volume={17}, ISSN={1751-228X}, url={http://dx.doi.org/10.1111/mbe.12372}, DOI={10.1111/mbe.12372}, number={4}, journal={Mind, Brain, and Education}, publisher={Wiley}, author={Church, Jessica A.}, year={2023}, month=jun, pages={257–266} }
 
- @article{5Sears_Greer_2022, title={A Review of Undergraduate Student Disclosures of Sexual Violence}, volume={10}, ISSN={2050-0513}, url={http://dx.doi.org/10.1016/j.sxmr.2022.06.006}, DOI={10.1016/j.sxmr.2022.06.006}, number={4}, journal={Sexual Medicine Reviews}, publisher={Oxford University Press (OUP)}, author={Sears-Greer, Mackenzie A. and Friehart, Bridget K. and Meston, Cindy M.}, year={2022}, month=aug, pages={543–553} }
+ @article{5Ben_Asher_2023, title={Bidirectional longitudinal relations between executive function and social function across adolescence.}, volume={59}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001580}, DOI={10.1037/dev0001580}, number={9}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={Ben-Asher, Eliya and Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=sep, pages={1587–1594} }
 
- @article{6Mesk__2022, title={Why Hungarians Have Sex: Development and Validation of a Brief 15-Item Instrument (YSEX?-15H)}, volume={51}, ISSN={1573-2800}, url={http://dx.doi.org/10.1007/s10508-022-02380-x}, DOI={10.1007/s10508-022-02380-x}, number={8}, journal={Archives of Sexual Behavior}, publisher={Springer Science and Business Media LLC}, author={Meskó, Norbert and Zsidó, András N. and Birkás, Béla and Meston, Cindy M. and Buss, David M.}, year={2022}, month=aug, pages={4007–4022} }
+ @article{6Demeter_2023, title={Resting-state cortical hubs in youth organize into four categories}, volume={42}, ISSN={2211-1247}, url={http://dx.doi.org/10.1016/j.celrep.2023.112521}, DOI={10.1016/j.celrep.2023.112521}, number={5}, journal={Cell Reports}, publisher={Elsevier BV}, author={Demeter, Damion V. and Gordon, Evan M. and Nugiel, Tehila and Garza, AnnaCarolina and Larguinho, Tyler L. and Church, Jessica A.}, year={2023}, month=may, pages={112521} }
 
- @article{7Handy_2022, title={Local Responses to Genital Arousal — Mechanisms of Lubrication}, volume={14}, ISSN={1548-3592}, url={http://dx.doi.org/10.1007/s11930-022-00350-x}, DOI={10.1007/s11930-022-00350-x}, number={4}, journal={Current Sexual Health Reports}, publisher={Springer Science and Business Media LLC}, author={Handy, Ariel B. and McMahon, Leah N. and Meston, Cindy M.}, year={2022}, month=nov, pages={247–253} }
+ @article{7Nugiel_2023, title={Brain Engagement During a Cognitive Flexibility Task Relates to Academic Performance in English Learners}, volume={17}, ISSN={1751-228X}, url={http://dx.doi.org/10.1111/mbe.12362}, DOI={10.1111/mbe.12362}, number={2}, journal={Mind, Brain, and Education}, publisher={Wiley}, author={Nugiel, Tehila and Mitchell, Mackenzie E. and Demeter, Damion V. and Garza, AnnaCarolina and Cirino, Paul T. and Hernandez, Arturo E. and Juranek, Jenifer and Church, Jessica A.}, year={2023}, month=may, pages={149–160} }
 
- @article{8Mesk__2021, title={Why Hungarians Have Sex (YSEX?-HSF)}, volume={51}, ISSN={1573-2800}, url={http://dx.doi.org/10.1007/s10508-021-02072-y}, DOI={10.1007/s10508-021-02072-y}, number={1}, journal={Archives of Sexual Behavior}, publisher={Springer Science and Business Media LLC}, author={Meskó, Norbert and Szatmári, Dóra and Láng, András and Meston, Cindy M. and Buss, David M.}, year={2021}, month=nov, pages={465–489} }
+ @article{8Aizza_2023, title={Youth pre-pandemic executive function relates to year one COVID-19 difficulties}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2023.1033282}, DOI={10.3389/fpsyg.2023.1033282}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Aizza, Alice and Porter, Blaire M. and Church, Jessica A.}, year={2023}, month=apr }
 
- @article{9Crosby_2021, title={Corrigendum to “Sex, sexual arousal, and sexual decision making: An evolutionary perspective” [Personal. Individ. Differ., 177 (2021): 110826 Pages 1–5]}, volume={178}, ISSN={0191-8869}, url={http://dx.doi.org/10.1016/j.paid.2021.110908}, DOI={10.1016/j.paid.2021.110908}, journal={Personality and Individual Differences}, publisher={Elsevier BV}, author={Crosby, Courtney L. and Buss, David M. and Cormack, Lawrence K. and Meston, Cindy M.}, year={2021}, month=aug, pages={110908} }
+ @article{9Church_2021, title={The Role of Neural and Genetic Processes in Learning to Read and Specific Reading Disabilities: Implications for Instruction}, volume={58}, ISSN={1936-2722}, url={http://dx.doi.org/10.1002/rrq.439}, DOI={10.1002/rrq.439}, number={2}, journal={Reading Research Quarterly}, publisher={Wiley}, author={Church, Jessica A. and Grigorenko, Elena L. and Fletcher, Jack M.}, year={2021}, month=aug, pages={203–219} }
 
- @article{10Crosby_2021, title={Sex, sexual arousal, and sexual decision making: An evolutionary perspective}, volume={177}, ISSN={0191-8869}, url={http://dx.doi.org/10.1016/j.paid.2021.110826}, DOI={10.1016/j.paid.2021.110826}, journal={Personality and Individual Differences}, publisher={Elsevier BV}, author={Crosby, Courtney L. and Buss, David M. and Cormack, Lawrence K. and Meston, Cindy M.}, year={2021}, month=jul, pages={110826} }
+ @article{10Davis_2022, title={Key considerations for child and adolescent MRI data collection}, volume={1}, ISSN={2813-1193}, url={http://dx.doi.org/10.3389/fnimg.2022.981947}, DOI={10.3389/fnimg.2022.981947}, journal={Frontiers in Neuroimaging}, publisher={Frontiers Media SA}, author={Davis, Brittany R. and Garza, AnnaCarolina and Church, Jessica A.}, year={2022}, month=sep }
 
- @article{11Kilimnik_2020, title={Sexual Shame in the Sexual Excitation and Inhibition Propensities of Men With and Without Nonconsensual Sexual Experiences}, volume={58}, ISSN={1559-8519}, url={http://dx.doi.org/10.1080/00224499.2020.1718585}, DOI={10.1080/00224499.2020.1718585}, number={2}, journal={The Journal of Sex Research}, publisher={Informa UK Limited}, author={Kilimnik, Chelsea D. and Meston, Cindy M.}, year={2020}, month=feb, pages={261–272} }
+ @article{11Garcini_2022, title={Increasing diversity in developmental cognitive neuroscience: A roadmap for increasing representation in pediatric neuroimaging research}, volume={58}, ISSN={1878-9293}, url={http://dx.doi.org/10.1016/j.dcn.2022.101167}, DOI={10.1016/j.dcn.2022.101167}, journal={Developmental Cognitive Neuroscience}, publisher={Elsevier BV}, author={Garcini, Luz M. and Arredondo, Maria M. and Berry, Obianuju and Church, Jessica A. and Fryberg, Stephanie and Thomason, Moriah E. and McLaughlin, Katie A.}, year={2022}, month=dec, pages={101167} }
 
-@Article{1,
-  title = {Freihart, B. K., & Meston, C. M. Physiological synchrony during partnered sexual activity. (In Press).},
-  author = {Cindy Meston},
-  journal = {Journal of Sex & Marital Therapy},
-  year = {2024},
-}
-@Article{2,
-  title = {Kilimnik, C. D., McMahon, L. N., & Meston, C. M. Changes in reports of sexuality pre- post- Me-Too Movement. (In press).},
-  author = {Cindy Meston},
-  journal = {Psychology of Women Quarterly},
-  year = {2024},
-}
+ @article{12Barendse_2022, title={Longitudinal Change in Adolescent Depression and Anxiety Symptoms from before to during the <scp>COVID</scp>‐19 Pandemic}, volume={33}, ISSN={1532-7795}, url={http://dx.doi.org/10.1111/jora.12781}, DOI={10.1111/jora.12781}, number={1}, journal={Journal of Research on Adolescence}, publisher={Wiley}, author={Barendse, Marjolein E.A. and Flannery, Jessica and Cavanagh, Caitlin and Aristizabal, Melissa and Becker, Stephen P. and Berger, Estelle and Breaux, Rosanna and Campione‐Barr, Nicole and Church, Jessica A. and Crone, Eveline A. and Dahl, Ronald E. and Dennis‐Tiwary, Tracy A. and Dvorsky, Melissa R. and Dziura, Sarah L. and van de Groep, Suzanne and Ho, Tiffany C. and Killoren, Sarah E. and Langberg, Joshua M. and Larguinho, Tyler L. and Magis‐Weinberg, Lucía and Michalska, Kalina J. and Mullins, Jordan L. and Nadel, Hanna and Porter, Blaire M. and Prinstein, Mitchell J. and Redcay, Elizabeth and Rose, Amanda J. and Rote, Wendy M. and Roy, Amy K. and Sweijen, Sophie W. and Telzer, Eva H. and Teresi, Giana I. and Thomas, April Gile and Pfeifer, Jennifer H.}, year={2022}, month=jul, pages={74–91} }
+
+ @article{13Porter_2021, title={Examination of Pre-pandemic Measures on Youth Well-being During Early Stages of the COVID-19 Pandemic}, volume={1}, ISSN={2667-1743}, url={http://dx.doi.org/10.1016/j.bpsgos.2021.08.003}, DOI={10.1016/j.bpsgos.2021.08.003}, number={4}, journal={Biological Psychiatry Global Open Science}, publisher={Elsevier BV}, author={Porter, Blaire M. and Douglas, Ian J. and Larguinho, Tyler L. and Aristizabal, Melissa and Mitchell, Mackenzie E. and Roe, Mary Abbe and Church, Jessica A.}, year={2021}, month=dec, pages={252–260} }
+
+ @article{14Garza_2021, title={A Core Set of Brain Regions Helps Kids Achieve Their Goals}, volume={9}, ISSN={2296-6846}, url={http://dx.doi.org/10.3389/frym.2021.618432}, DOI={10.3389/frym.2021.618432}, journal={Frontiers for Young Minds}, publisher={Frontiers Media SA}, author={Garza, AnnaCarolina and Aizza, Alice and Charoenworawat, Janchira K. and Church, Jessica A.}, year={2021}, month=aug }
+
+ @article{15Zheng_2021, title={A Developmental Eye Tracking Investigation of Cued Task Switching Performance}, volume={92}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.13478}, DOI={10.1111/cdev.13478}, number={4}, journal={Child Development}, publisher={Wiley}, author={Zheng, Annie and Church, Jessica A.}, year={2021}, month=jan, pages={1652–1672} }
+
+ @article{16Roe_2021, title={Error-signaling in the developing brain}, volume={227}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117621}, DOI={10.1016/j.neuroimage.2020.117621}, journal={NeuroImage}, publisher={Elsevier BV}, author={Roe, Mary Abbe and Engelhardt, Laura E. and Nugiel, Tehila and Harden, K. Paige and Tucker-Drob, Elliot M. and Church, Jessica A.}, year={2021}, month=feb, pages={117621} }
+
