--- a/books.bib
+++ b/books.bib
@@ -1,6 +1,6 @@
 @Book{1,
-  title = {The Auditory Cognitive Neuroscience of Speech Perception in Context},
-  author = {Lori L. Holt},
-  publisher = {Speech Perception},
-  year = {2022},
+  title = {The genetic lottery},
+  author = {K. Paige Harden},
+  publisher = {Princeton},
+  year = {2021},
 }
