--- a/chaps.bib
+++ b/chaps.bib
@@ -1,9 +1,2 @@
- @book{Balcetis_2022, title={The Handbook of Impression Formation: A Social Psychological Approach}, ISBN={9781003045687}, url={http://dx.doi.org/10.4324/9781003045687}, DOI={10.4324/9781003045687}, publisher={Routledge}, author={Balcetis, Emily and Moskowitz, Gordon B.}, year={2022}, month=aug }
+ @inbook{Gaudet_2023, title={Circadian Rhythms Regulate Neuroinflammation after Traumatic Brain Injury and Spinal Cord Injury}, ISBN={9781009060349}, url={http://dx.doi.org/10.1017/9781009057646.009}, DOI={10.1017/9781009057646.009}, booktitle={Biological Implications of Circadian Disruption}, publisher={Cambridge University Press}, author={Gaudet, Andrew D. and Greenough, Emily K.}, year={2023}, month=oct, pages={183–205} }
 
-@InCollection{1,
-  title = {The integrated causal uncertainty model},
-  author = {Marlone D. Henderson},
-  booktitle = {The handbook of the uncertain self (2nd edition)},
-  year = {2024},
-  publisher = {.},
-}
