--- a/pubs.bib
+++ b/pubs.bib
@@ -1,32 +1,18 @@
- @article{1Nugiel_2023, title={Brain connectivity and academic skills in English learners}, volume={34}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhad414}, DOI={10.1093/cercor/bhad414}, number={1}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Nugiel, Tehila and Demeter, Damion V and Mitchell, Mackenzie E and Garza, AnnaCarolina and Hernandez, Arturo E and Juranek, Jenifer and Church, Jessica A}, year={2023}, month=dec }
+ @article{1Aldrich_2024, title={Effects of dim light at night in C57BL/6 J mice on recovery after spinal cord injury}, volume={375}, ISSN={0014-4886}, url={http://dx.doi.org/10.1016/j.expneurol.2024.114725}, DOI={10.1016/j.expneurol.2024.114725}, journal={Experimental Neurology}, publisher={Elsevier BV}, author={Aldrich, John C. and Scheinfeld, Ashley R. and Lee, Sydney E. and Dusenbery, Kalina J. and Mahach, Kathryn M. and Van de Veire, Brigid C. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2024}, month=may, pages={114725} }
 
- @article{2Burenkova_2024, title={Associations between telomere length, glucocorticoid receptor gene DNA methylation, volume of stress-related brain structures, and academic performance in middle-school-age children}, volume={17}, ISSN={2666-4976}, url={http://dx.doi.org/10.1016/j.cpnec.2023.100223}, DOI={10.1016/j.cpnec.2023.100223}, journal={Comprehensive Psychoneuroendocrinology}, publisher={Elsevier BV}, author={Burenkova, Olga V. and Naumova, Oksana Yu. and Church, Jessica A. and Juranek, Jenifer and Fletcher, Jack M. and Grigorenko, Elena L.}, year={2024}, month=feb, pages={100223} }
+ @article{2Lee_2023, title={Sex Differences in Pain: Spinal Cord Injury in Female and Male Mice Elicits Behaviors Related to Neuropathic Pain}, volume={40}, ISSN={1557-9042}, url={http://dx.doi.org/10.1089/neu.2022.0482}, DOI={10.1089/neu.2022.0482}, number={9–10}, journal={Journal of Neurotrauma}, publisher={Mary Ann Liebert Inc}, author={Lee, Sydney E. and Greenough, Emily K. and Oancea, Paul and Scheinfeld, Ashley R. and Douglas, Apsaline M. and Gaudet, Andrew D.}, year={2023}, month=may, pages={833–844} }
 
- @article{3Porter_2023, title={A longitudinal examination of executive function abilities, attention‐deficit/hyperactivity disorder, and puberty in adolescence}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.14057}, DOI={10.1111/cdev.14057}, journal={Child Development}, publisher={Wiley}, author={Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=dec }
+ @article{3Chen_2023, title={Circadian Regulation of the Neuroimmune Environment Across the Lifespan: From Brain Development to Aging}, volume={38}, ISSN={1552-4531}, url={http://dx.doi.org/10.1177/07487304231178950}, DOI={10.1177/07487304231178950}, number={5}, journal={Journal of Biological Rhythms}, publisher={SAGE Publications}, author={Chen, Ruizhuo and Routh, Brandy N. and Gaudet, Andrew D. and Fonken, Laura K.}, year={2023}, month=jun, pages={419–446} }
 
- @article{4Church_2023, title={The Brain’s Control Networks in Reading: Insights From Cross‐Task Studies of Youth}, volume={17}, ISSN={1751-228X}, url={http://dx.doi.org/10.1111/mbe.12372}, DOI={10.1111/mbe.12372}, number={4}, journal={Mind, Brain, and Education}, publisher={Wiley}, author={Church, Jessica A.}, year={2023}, month=jun, pages={257–266} }
+ @article{4Chen_2023, title={Microglia depletion ameliorates neuroinflammation, anxiety-like behavior, and cognitive deficits in a sex-specific manner in Rev-erbα knockout mice}, volume={114}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2023.08.029}, DOI={10.1016/j.bbi.2023.08.029}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Chen, Ruizhuo and Routh, Brandy N. and Straetker, Jillian E. and Gibson, Cecily R. and Weitzner, Aidan S. and Bell, Kiersten S. and Gaudet, Andrew D. and Fonken, Laura K.}, year={2023}, month=nov, pages={287–298} }
 
- @article{5Ben_Asher_2023, title={Bidirectional longitudinal relations between executive function and social function across adolescence.}, volume={59}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001580}, DOI={10.1037/dev0001580}, number={9}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={Ben-Asher, Eliya and Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=sep, pages={1587–1594} }
+ @article{5Ince_2023, title={Sex differences in microglia function in aged rats underlie vulnerability to cognitive decline}, volume={114}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2023.09.009}, DOI={10.1016/j.bbi.2023.09.009}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Ince, Louise M. and Darling, Jeffrey S. and Sanchez, Kevin and Bell, Kiersten S. and Melbourne, Jennifer K. and Davis, Lourdes K. and Nixon, Kimberly and Gaudet, Andrew D. and Fonken, Laura.K.}, year={2023}, month=nov, pages={438–452} }
 
- @article{6Demeter_2023, title={Resting-state cortical hubs in youth organize into four categories}, volume={42}, ISSN={2211-1247}, url={http://dx.doi.org/10.1016/j.celrep.2023.112521}, DOI={10.1016/j.celrep.2023.112521}, number={5}, journal={Cell Reports}, publisher={Elsevier BV}, author={Demeter, Damion V. and Gordon, Evan M. and Nugiel, Tehila and Garza, AnnaCarolina and Larguinho, Tyler L. and Church, Jessica A.}, year={2023}, month=may, pages={112521} }
+ @article{6Lee_2023, title={Spinal cord injury in mice amplifies anxiety: A novel light-heat conflict test exposes increased salience of anxiety over heat}, volume={364}, ISSN={0014-4886}, url={http://dx.doi.org/10.1016/j.expneurol.2023.114382}, DOI={10.1016/j.expneurol.2023.114382}, journal={Experimental Neurology}, publisher={Elsevier BV}, author={Lee, Sydney E. and Greenough, Emily K. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2023}, month=jun, pages={114382} }
 
- @article{7Nugiel_2023, title={Brain Engagement During a Cognitive Flexibility Task Relates to Academic Performance in English Learners}, volume={17}, ISSN={1751-228X}, url={http://dx.doi.org/10.1111/mbe.12362}, DOI={10.1111/mbe.12362}, number={2}, journal={Mind, Brain, and Education}, publisher={Wiley}, author={Nugiel, Tehila and Mitchell, Mackenzie E. and Demeter, Damion V. and Garza, AnnaCarolina and Cirino, Paul T. and Hernandez, Arturo E. and Juranek, Jenifer and Church, Jessica A.}, year={2023}, month=may, pages={149–160} }
+ @article{7Fonken_2022, title={Neuroimmunology of healthy brain aging}, volume={77}, ISSN={0959-4388}, url={http://dx.doi.org/10.1016/j.conb.2022.102649}, DOI={10.1016/j.conb.2022.102649}, journal={Current Opinion in Neurobiology}, publisher={Elsevier BV}, author={Fonken, Laura K. and Gaudet, Andrew D.}, year={2022}, month=dec, pages={102649} }
 
- @article{8Aizza_2023, title={Youth pre-pandemic executive function relates to year one COVID-19 difficulties}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2023.1033282}, DOI={10.3389/fpsyg.2023.1033282}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Aizza, Alice and Porter, Blaire M. and Church, Jessica A.}, year={2023}, month=apr }
+ @article{8Lee_2022, title={Distinct immune and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, volume={103}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2022.04.015}, DOI={10.1016/j.bbi.2022.04.015}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2022}, month=jul, pages={130–144} }
 
- @article{9Church_2021, title={The Role of Neural and Genetic Processes in Learning to Read and Specific Reading Disabilities: Implications for Instruction}, volume={58}, ISSN={1936-2722}, url={http://dx.doi.org/10.1002/rrq.439}, DOI={10.1002/rrq.439}, number={2}, journal={Reading Research Quarterly}, publisher={Wiley}, author={Church, Jessica A. and Grigorenko, Elena L. and Fletcher, Jack M.}, year={2021}, month=aug, pages={203–219} }
-
- @article{10Davis_2022, title={Key considerations for child and adolescent MRI data collection}, volume={1}, ISSN={2813-1193}, url={http://dx.doi.org/10.3389/fnimg.2022.981947}, DOI={10.3389/fnimg.2022.981947}, journal={Frontiers in Neuroimaging}, publisher={Frontiers Media SA}, author={Davis, Brittany R. and Garza, AnnaCarolina and Church, Jessica A.}, year={2022}, month=sep }
-
- @article{11Garcini_2022, title={Increasing diversity in developmental cognitive neuroscience: A roadmap for increasing representation in pediatric neuroimaging research}, volume={58}, ISSN={1878-9293}, url={http://dx.doi.org/10.1016/j.dcn.2022.101167}, DOI={10.1016/j.dcn.2022.101167}, journal={Developmental Cognitive Neuroscience}, publisher={Elsevier BV}, author={Garcini, Luz M. and Arredondo, Maria M. and Berry, Obianuju and Church, Jessica A. and Fryberg, Stephanie and Thomason, Moriah E. and McLaughlin, Katie A.}, year={2022}, month=dec, pages={101167} }
-
- @article{12Barendse_2022, title={Longitudinal Change in Adolescent Depression and Anxiety Symptoms from before to during the <scp>COVID</scp>‐19 Pandemic}, volume={33}, ISSN={1532-7795}, url={http://dx.doi.org/10.1111/jora.12781}, DOI={10.1111/jora.12781}, number={1}, journal={Journal of Research on Adolescence}, publisher={Wiley}, author={Barendse, Marjolein E.A. and Flannery, Jessica and Cavanagh, Caitlin and Aristizabal, Melissa and Becker, Stephen P. and Berger, Estelle and Breaux, Rosanna and Campione‐Barr, Nicole and Church, Jessica A. and Crone, Eveline A. and Dahl, Ronald E. and Dennis‐Tiwary, Tracy A. and Dvorsky, Melissa R. and Dziura, Sarah L. and van de Groep, Suzanne and Ho, Tiffany C. and Killoren, Sarah E. and Langberg, Joshua M. and Larguinho, Tyler L. and Magis‐Weinberg, Lucía and Michalska, Kalina J. and Mullins, Jordan L. and Nadel, Hanna and Porter, Blaire M. and Prinstein, Mitchell J. and Redcay, Elizabeth and Rose, Amanda J. and Rote, Wendy M. and Roy, Amy K. and Sweijen, Sophie W. and Telzer, Eva H. and Teresi, Giana I. and Thomas, April Gile and Pfeifer, Jennifer H.}, year={2022}, month=jul, pages={74–91} }
-
- @article{13Porter_2021, title={Examination of Pre-pandemic Measures on Youth Well-being During Early Stages of the COVID-19 Pandemic}, volume={1}, ISSN={2667-1743}, url={http://dx.doi.org/10.1016/j.bpsgos.2021.08.003}, DOI={10.1016/j.bpsgos.2021.08.003}, number={4}, journal={Biological Psychiatry Global Open Science}, publisher={Elsevier BV}, author={Porter, Blaire M. and Douglas, Ian J. and Larguinho, Tyler L. and Aristizabal, Melissa and Mitchell, Mackenzie E. and Roe, Mary Abbe and Church, Jessica A.}, year={2021}, month=dec, pages={252–260} }
-
- @article{14Garza_2021, title={A Core Set of Brain Regions Helps Kids Achieve Their Goals}, volume={9}, ISSN={2296-6846}, url={http://dx.doi.org/10.3389/frym.2021.618432}, DOI={10.3389/frym.2021.618432}, journal={Frontiers for Young Minds}, publisher={Frontiers Media SA}, author={Garza, AnnaCarolina and Aizza, Alice and Charoenworawat, Janchira K. and Church, Jessica A.}, year={2021}, month=aug }
-
- @article{15Zheng_2021, title={A Developmental Eye Tracking Investigation of Cued Task Switching Performance}, volume={92}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.13478}, DOI={10.1111/cdev.13478}, number={4}, journal={Child Development}, publisher={Wiley}, author={Zheng, Annie and Church, Jessica A.}, year={2021}, month=jan, pages={1652–1672} }
-
- @article{16Roe_2021, title={Error-signaling in the developing brain}, volume={227}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117621}, DOI={10.1016/j.neuroimage.2020.117621}, journal={NeuroImage}, publisher={Elsevier BV}, author={Roe, Mary Abbe and Engelhardt, Laura E. and Nugiel, Tehila and Harden, K. Paige and Tucker-Drob, Elliot M. and Church, Jessica A.}, year={2021}, month=feb, pages={117621} }
+ @article{9Gaudet_2021, title={Aging and miR-155 in mice influence survival and neuropathic pain after spinal cord injury}, volume={97}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2021.07.003}, DOI={10.1016/j.bbi.2021.07.003}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Gaudet, Andrew D. and Fonken, Laura K. and Ayala, Monica T. and Maier, Steven F. and Watkins, Linda R.}, year={2021}, month=oct, pages={365–370} }
 
