--- a/chaps.bib
+++ b/chaps.bib
@@ -1,2 +1,14 @@
- @inbook{Gaudet_2023, title={Circadian Rhythms Regulate Neuroinflammation after Traumatic Brain Injury and Spinal Cord Injury}, ISBN={9781009060349}, url={http://dx.doi.org/10.1017/9781009057646.009}, DOI={10.1017/9781009057646.009}, booktitle={Biological Implications of Circadian Disruption}, publisher={Cambridge University Press}, author={Gaudet, Andrew D. and Greenough, Emily K.}, year={2023}, month=oct, pages={183–205} }
-
+@InCollection{1,
+  title = {Forgetting},
+  author = {Jarrod Lewis-Peacock},
+  booktitle = {Encyclopedia of the Human Brain, 2nd edition},
+  year = {2023},
+  publisher = {.},
+}
+@InCollection{2,
+  title = {Curating the contents of working memory},
+  author = {Jarrod Lewis-Peacock},
+  booktitle = {Visual Memory},
+  year = {2022},
+  publisher = {.},
+}
