--- a/preprints.bib
+++ b/preprints.bib
@@ -1,10 +1,6 @@
- @article{1Lee_2023, title={Spinal cord injury in mice amplifies anxiety: a novel light-heat conflict test exposes increased salience of anxiety over heat}, url={http://dx.doi.org/10.1101/2023.01.13.523970}, DOI={10.1101/2023.01.13.523970}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Sydney E. and Greenough, Emily K. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2023}, month=jan }
+ @article{1Cooper_2023, title={Threat learning by proxy: Semantic structures facilitate emotional memory integration throughout the MTL and medial prefrontal cortex}, url={http://dx.doi.org/10.31234/osf.io/c7zyh}, DOI={10.31234/osf.io/c7zyh}, publisher={Center for Open Science}, author={Cooper, Samuel Emerson and Hennings, Augustin C. and Bibb, Sophia and Lewis-Peacock, Jarrod and Dunsmoor, Joseph E.}, year={2023}, month=oct }
 
- @article{2Aldrich_2023, title={Effects of dim light at night in C57BL/6J mice on recovery after spinal cord injury}, url={http://dx.doi.org/10.1101/2023.09.15.557980}, DOI={10.1101/2023.09.15.557980}, publisher={Cold Spring Harbor Laboratory}, author={Aldrich, John C. and Scheinfeld, Ashley R. and Lee, Sydney E. and Dusenbery, Kalina J. and Mahach, Kathryn M. and Van de Veire, Brigid C. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2023}, month=sep }
+ @article{2DeRosa_2023, title={Neural Systems Underlying the Implementation of Working Memory Removal Operations}, url={http://dx.doi.org/10.1101/2023.02.14.519204}, DOI={10.1101/2023.02.14.519204}, publisher={Cold Spring Harbor Laboratory}, author={DeRosa, Jacob and Kim, Hyojeong and Lewis-Peacock, Jarrod and Banich, Marie T.}, year={2023}, month=feb }
 
- @article{3Lee_2022, title={Sex differences in pain: Spinal cord injury in female and male mice elicits behaviors related to neuropathic pain}, url={http://dx.doi.org/10.1101/2022.10.18.512805}, DOI={10.1101/2022.10.18.512805}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Sydney E. and Greenough, Emily K. and Oancea, Paul and Scheinfeld, Ashley R. and Douglas, Apsaline M. and Gaudet, Andrew D.}, year={2022}, month=oct }
-
- @article{4Lee_2022, title={Anxiety-like behaviors in mice unmasked: Revealing sex differences in anxiety using a novel light-heat conflict test}, url={http://dx.doi.org/10.1101/2022.09.02.506410}, DOI={10.1101/2022.09.02.506410}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Sydney E. and Park, Sung-Hoon and Aldrich, John C. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2022}, month=sep }
-
- @article{5Lee_2021, title={Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, url={http://dx.doi.org/10.1101/2021.09.04.458987}, DOI={10.1101/2021.09.04.458987}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2021}, month=sep }
+ @article{3Keller_2021, title={Rewarded extinction increases amygdalar connectivity and stabilizes long-term memory traces in the vmPFC}, url={http://dx.doi.org/10.1101/2021.12.08.471649}, DOI={10.1101/2021.12.08.471649}, publisher={Cold Spring Harbor Laboratory}, author={Keller, Nicole E. and Hennings, Augustin C. and Leiker, Emily K. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2021}, month=dec }
 
