--- a/pubs.bib
+++ b/pubs.bib
@@ -1,18 +1,32 @@
- @article{1Aldrich_2024, title={Effects of dim light at night in C57BL/6 J mice on recovery after spinal cord injury}, volume={375}, ISSN={0014-4886}, url={http://dx.doi.org/10.1016/j.expneurol.2024.114725}, DOI={10.1016/j.expneurol.2024.114725}, journal={Experimental Neurology}, publisher={Elsevier BV}, author={Aldrich, John C. and Scheinfeld, Ashley R. and Lee, Sydney E. and Dusenbery, Kalina J. and Mahach, Kathryn M. and Van de Veire, Brigid C. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2024}, month=may, pages={114725} }
+ @article{1DeRosa_2023, title={Neural Systems Underlying the Implementation of Working Memory Removal Operations}, volume={44}, ISSN={1529-2401}, url={http://dx.doi.org/10.1523/jneurosci.0283-23.2023}, DOI={10.1523/jneurosci.0283-23.2023}, number={2}, journal={The Journal of Neuroscience}, publisher={Society for Neuroscience}, author={DeRosa, Jacob and Kim, Hyojeong and Lewis-Peacock, Jarrod and Banich, Marie T.}, year={2023}, month=nov, pages={e0283232023} }
 
- @article{2Lee_2023, title={Sex Differences in Pain: Spinal Cord Injury in Female and Male Mice Elicits Behaviors Related to Neuropathic Pain}, volume={40}, ISSN={1557-9042}, url={http://dx.doi.org/10.1089/neu.2022.0482}, DOI={10.1089/neu.2022.0482}, number={9–10}, journal={Journal of Neurotrauma}, publisher={Mary Ann Liebert Inc}, author={Lee, Sydney E. and Greenough, Emily K. and Oancea, Paul and Scheinfeld, Ashley R. and Douglas, Apsaline M. and Gaudet, Andrew D.}, year={2023}, month=may, pages={833–844} }
+ @article{2Zhang_2023, title={Bend but don’t break: Prioritization protects working memory from displacement but leaves it vulnerable to distortion from distraction}, volume={239}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/j.cognition.2023.105574}, DOI={10.1016/j.cognition.2023.105574}, journal={Cognition}, publisher={Elsevier BV}, author={Zhang, Ziyao and Lewis-Peacock, Jarrod A.}, year={2023}, month=oct, pages={105574} }
 
- @article{3Chen_2023, title={Circadian Regulation of the Neuroimmune Environment Across the Lifespan: From Brain Development to Aging}, volume={38}, ISSN={1552-4531}, url={http://dx.doi.org/10.1177/07487304231178950}, DOI={10.1177/07487304231178950}, number={5}, journal={Journal of Biological Rhythms}, publisher={SAGE Publications}, author={Chen, Ruizhuo and Routh, Brandy N. and Gaudet, Andrew D. and Fonken, Laura K.}, year={2023}, month=jun, pages={419–446} }
+ @article{3Chiarello_2023, title={The Effect of Biomechanical Features on Classification of Dual-Task Gait}, volume={23}, ISSN={2379-9153}, url={http://dx.doi.org/10.1109/jsen.2022.3227475}, DOI={10.1109/jsen.2022.3227475}, number={3}, journal={IEEE Sensors Journal}, publisher={Institute of Electrical and Electronics Engineers (IEEE)}, author={Chiarello, Mark and Lee, Jeonghwan and Salinas, Mandy McClintock and Hilsabeck, Robin C. and Lewis-Peacock, Jarrod and Sulzer, James}, year={2023}, month=feb, pages={3079–3089} }
 
- @article{4Chen_2023, title={Microglia depletion ameliorates neuroinflammation, anxiety-like behavior, and cognitive deficits in a sex-specific manner in Rev-erbα knockout mice}, volume={114}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2023.08.029}, DOI={10.1016/j.bbi.2023.08.029}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Chen, Ruizhuo and Routh, Brandy N. and Straetker, Jillian E. and Gibson, Cecily R. and Weitzner, Aidan S. and Bell, Kiersten S. and Gaudet, Andrew D. and Fonken, Laura K.}, year={2023}, month=nov, pages={287–298} }
+ @article{4Bruning_2023, title={Rumination burdens the updating of working memory}, volume={85}, ISSN={1943-393X}, url={http://dx.doi.org/10.3758/s13414-022-02649-2}, DOI={10.3758/s13414-022-02649-2}, number={5}, journal={Attention, Perception, &amp; Psychophysics}, publisher={Springer Science and Business Media LLC}, author={Bruning, Allison L. and Mallya, Meghan M. and Lewis-Peacock, Jarrod A.}, year={2023}, month=jan, pages={1452–1460} }
 
- @article{5Ince_2023, title={Sex differences in microglia function in aged rats underlie vulnerability to cognitive decline}, volume={114}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2023.09.009}, DOI={10.1016/j.bbi.2023.09.009}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Ince, Louise M. and Darling, Jeffrey S. and Sanchez, Kevin and Bell, Kiersten S. and Melbourne, Jennifer K. and Davis, Lourdes K. and Nixon, Kimberly and Gaudet, Andrew D. and Fonken, Laura.K.}, year={2023}, month=nov, pages={438–452} }
+ @article{5Zhang_2023, title={Prioritization sharpens working memories but does not protect them from distraction.}, volume={152}, ISSN={0096-3445}, url={http://dx.doi.org/10.1037/xge0001309}, DOI={10.1037/xge0001309}, number={4}, journal={Journal of Experimental Psychology: General}, publisher={American Psychological Association (APA)}, author={Zhang, Ziyao and Lewis-Peacock, Jarrod A.}, year={2023}, month=apr, pages={1158–1174} }
 
- @article{6Lee_2023, title={Spinal cord injury in mice amplifies anxiety: A novel light-heat conflict test exposes increased salience of anxiety over heat}, volume={364}, ISSN={0014-4886}, url={http://dx.doi.org/10.1016/j.expneurol.2023.114382}, DOI={10.1016/j.expneurol.2023.114382}, journal={Experimental Neurology}, publisher={Elsevier BV}, author={Lee, Sydney E. and Greenough, Emily K. and Fonken, Laura K. and Gaudet, Andrew D.}, year={2023}, month=jun, pages={114382} }
+ @article{6Hennings_2022, title={Pattern analysis of neuroimaging data reveals novel insights on threat learning and extinction in humans}, volume={142}, ISSN={0149-7634}, url={http://dx.doi.org/10.1016/j.neubiorev.2022.104918}, DOI={10.1016/j.neubiorev.2022.104918}, journal={Neuroscience &amp; Biobehavioral Reviews}, publisher={Elsevier BV}, author={Hennings, Augustin C. and Cooper, Samuel E. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2022}, month=nov, pages={104918} }
 
- @article{7Fonken_2022, title={Neuroimmunology of healthy brain aging}, volume={77}, ISSN={0959-4388}, url={http://dx.doi.org/10.1016/j.conb.2022.102649}, DOI={10.1016/j.conb.2022.102649}, journal={Current Opinion in Neurobiology}, publisher={Elsevier BV}, author={Fonken, Laura K. and Gaudet, Andrew D.}, year={2022}, month=dec, pages={102649} }
+ @article{7Keller_2022, title={Rewarded Extinction Increases Amygdalar Connectivity and Stabilizes Long-Term Memory Traces in the vmPFC}, volume={42}, ISSN={1529-2401}, url={http://dx.doi.org/10.1523/jneurosci.0075-22.2022}, DOI={10.1523/jneurosci.0075-22.2022}, number={29}, journal={The Journal of Neuroscience}, publisher={Society for Neuroscience}, author={Keller, Nicole E. and Hennings, Augustin C. and Leiker, Emily K. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2022}, month=jun, pages={5717–5729} }
 
- @article{8Lee_2022, title={Distinct immune and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, volume={103}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2022.04.015}, DOI={10.1016/j.bbi.2022.04.015}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2022}, month=jul, pages={130–144} }
+ @article{8Koslov_2022, title={Distinct monitoring strategies underlie costs and performance in prospective memory}, volume={50}, ISSN={1532-5946}, url={http://dx.doi.org/10.3758/s13421-022-01275-5}, DOI={10.3758/s13421-022-01275-5}, number={8}, journal={Memory &amp; Cognition}, publisher={Springer Science and Business Media LLC}, author={Koslov, Seth R. and Bulls, Landry S. and Lewis-Peacock, Jarrod A.}, year={2022}, month=apr, pages={1772–1788} }
 
- @article{9Gaudet_2021, title={Aging and miR-155 in mice influence survival and neuropathic pain after spinal cord injury}, volume={97}, ISSN={0889-1591}, url={http://dx.doi.org/10.1016/j.bbi.2021.07.003}, DOI={10.1016/j.bbi.2021.07.003}, journal={Brain, Behavior, and Immunity}, publisher={Elsevier BV}, author={Gaudet, Andrew D. and Fonken, Laura K. and Ayala, Monica T. and Maier, Steven F. and Watkins, Linda R.}, year={2021}, month=oct, pages={365–370} }
+ @article{9Mallett_2022, title={Working Memory Swap Errors Have Identifiable Neural Representations}, volume={34}, ISSN={1530-8898}, url={http://dx.doi.org/10.1162/jocn_a_01831}, DOI={10.1162/jocn_a_01831}, number={5}, journal={Journal of Cognitive Neuroscience}, publisher={MIT Press - Journals}, author={Mallett, Remington and Lorenc, Elizabeth S. and Lewis-Peacock, Jarrod A.}, year={2022}, month=mar, pages={776–786} }
+
+ @article{10Hennings_2022, title={Neural reinstatement reveals divided organization of fear and extinction memories in the human brain}, volume={32}, ISSN={0960-9822}, url={http://dx.doi.org/10.1016/j.cub.2021.11.004}, DOI={10.1016/j.cub.2021.11.004}, number={2}, journal={Current Biology}, publisher={Elsevier BV}, author={Hennings, Augustin C. and McClay, Mason and Drew, Michael R. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2022}, month=jan, pages={304-314.e5} }
+
+ @article{11Lu_2021, title={Multi-scale neural decoding and analysis}, volume={18}, ISSN={1741-2552}, url={http://dx.doi.org/10.1088/1741-2552/ac160f}, DOI={10.1088/1741-2552/ac160f}, number={4}, journal={Journal of Neural Engineering}, publisher={IOP Publishing}, author={Lu, Hung-Yun and Lorenc, Elizabeth S and Zhu, Hanlin and Kilmarx, Justin and Sulzer, James and Xie, Chong and Tobler, Philippe N and Watrous, Andrew J and Orsborn, Amy L and Lewis-Peacock, Jarrod and Santacruz, Samantha R}, year={2021}, month=aug, pages={045013} }
+
+ @article{12Hennings_2021, title={Emotional learning retroactively enhances item memory but distorts source attribution}, volume={28}, ISSN={1549-5485}, url={http://dx.doi.org/10.1101/lm.053371.120}, DOI={10.1101/lm.053371.120}, number={6}, journal={Learning &amp; Memory}, publisher={Cold Spring Harbor Laboratory}, author={Hennings, Augustin C. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2021}, month=may, pages={178–186} }
+
+ @article{13Oblak_2021, title={Differential neural plasticity of individual fingers revealed by fMRI neurofeedback}, volume={125}, ISSN={1522-1598}, url={http://dx.doi.org/10.1152/jn.00509.2020}, DOI={10.1152/jn.00509.2020}, number={5}, journal={Journal of Neurophysiology}, publisher={American Physiological Society}, author={Oblak, Ethan and Lewis-Peacock, Jarrod and Sulzer, James}, year={2021}, month=may, pages={1720–1734} }
+
+ @article{14Chiu_2021, title={Separation of item and context in item-method directed forgetting}, volume={235}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2021.117983}, DOI={10.1016/j.neuroimage.2021.117983}, journal={NeuroImage}, publisher={Elsevier BV}, author={Chiu, Yi-Chieh and Wang, Tracy H. and Beck, Diane M. and Lewis-Peacock, Jarrod A. and Sahakyan, Lili}, year={2021}, month=jul, pages={117983} }
+
+ @article{15Lorenc_2021, title={Distraction in Visual Working Memory: Resistance is Not Futile}, volume={25}, ISSN={1364-6613}, url={http://dx.doi.org/10.1016/j.tics.2020.12.004}, DOI={10.1016/j.tics.2020.12.004}, number={3}, journal={Trends in Cognitive Sciences}, publisher={Elsevier BV}, author={Lorenc, Elizabeth S. and Mallett, Remington and Lewis-Peacock, Jarrod A.}, year={2021}, month=mar, pages={228–239} }
+
+ @article{16Kilmarx_2021, title={Towards a common template for neural reinforcement of finger individuation}, volume={11}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-020-80166-8}, DOI={10.1038/s41598-020-80166-8}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Kilmarx, Justin and Oblak, Ethan and Sulzer, James and Lewis-Peacock, Jarrod}, year={2021}, month=jan }
 
